jenkins-service-externalip.yml
apiVersion: v1
kind: Service
metadata:
  name: jenkins4
spec:
  externalIPs:
  - 101.55.50.200
  externalTrafficPolicy: Cluster
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/component: jenkins-master
    app.kubernetes.io/instance: jenkins
  type: LoadBalancer
